--- a/index.html
+++ b/index.html
@@ -31,24 +31,35 @@
       </aside>
       <!-- <div id="today" class="mt-3 float-right"></div> -->
       <div class="col-9 float-right">
-        <div class="card bg-light text-dark p-2 rem shadow-lg p-3 mb-5 bg-white rounded" style="width: 710; height: 19rem;">
+        <div class="card bg-light text-dark p-2 rem shadow-lg p-3 mb-5 bg-white rounded"
+          style="width: 710; height: 19rem;">
           <div id="today"></div>
 
           <!-- UV SECTION WITH COLOR CHANGE -->
           <div class="btn btn-sm" id="uv-btn"></div>
         </div>
-        <br>
-        <!-- <div id="forecast" class="mt-3"></div> -->
+      </div>
+    </div>
+  </div>
+    <br>
+    <!-- <div id="forecast" class="mt-3"></div> -->
 
-        <!-- FIVE DAY FORECAST SECTION, 5 CARD LAYOUT -->
-        <h3 id="foreLabel">5 Day Forecast</h3>
-        <div id="foreDiv" class="row">
-
+    <!-- FIVE DAY FORECAST SECTION, 5 CARD LAYOUT -->
+    <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div id="mainCard" class="card bg-light text-dark p-2 rem shadow-lg p-3 mb-5 bg-white rounded"
+          style="width: 100%; height: 19rem;">
+          <h3 id="foreLabel">5 Day Forecast</h3>
+          <div class="col-12">
+          <ul id="foreDiv">
+          </ul>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
